kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projeto-vm-app
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: projeto-vm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
