kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projeto-vm-app
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: projeto-vm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projeto-vm-app
                port:
                  number: 80
